@@ -1,9 +1,10 @@
-For yoshimi version 1.2.1 or later
-
-You need version 1.3.2 or later for root changes to work
+These are test files.
 
 RootBankProgChangeTest
 
+For yoshimi version 1.2.1 or later.
+
+You need version 1.3.2 or later for root changes to work.
 
 For versions before 1.3.2
     Expects 'Bank Change' set to LSB and 'Enable On Load' to be checked.
@@ -20,4 +21,4 @@ Mastersynth High is chosen for the slow pads to really stress test the changes.
 
 There are a couple of deliberately invalid changes.
 
-Rosegarden version lets you see exactly where the changes take place.
+The Rosegarden version lets you see exactly where the changes take place.
