@@ -7,10 +7,10 @@ After that send the following DATA values. Commands with LSB x don't actually us
 DATA
 MSB
 
-  2 LSB key     Set master key shift {52 <= key <= 76} (-12 to + 12)
-  7 LSB volume  Set master Volume {volume}
+  2 LSB key         Set master key shift {52 <= key <= 76} (-12 to + 12)
+  7 LSB volume      Set master Volume {volume}
 
-100 LSB > 63    Send reports to Reports window, otherwise to stderr.
+100 LSB > 63        Send reports to Reports window, otherwise to stderr.
 
 109 LSB x  [13843]  List the following:
                     Reports destination
@@ -18,10 +18,10 @@ MSB
                     Current Bank
                     CC to control Root path change
                     CC to control Bank change
-                    Program change {enabled/disabled}
+                    Accept Program change {enabled/disabled}
                     Activate part when program changed {enabled/disabled}
                     CC to control Extended Program change {instruments 127 to 159}
-                    Number of acessible parts
+                    Number of available parts
     
 110 LSB x  [13970]  List all root paths
 111 LSB path        List all banks in Root ID {path}
@@ -34,6 +34,6 @@ MSB
 115 LSB > 63        Enable Program change otherwise disable
 116 LSB > 63        Enable activation of part when program changed
 117 LSB extprog     Set CC control Extended program change {extprog > 119 disables}
-118 LSB parts       Set number of active parts {parts = 16, 32 or 64}
+118 LSB parts       Set number of available parts {parts = 16, 32 or 64}
 
 119 LSB x  [15113]  Save all dynamic settings
