@@ -14,7 +14,7 @@ For a start, from bitter experience it is fatally easy to change two variables t
 
 
 
-To avoid possible confusion, from now on 'master' will display the last released version number (without bugfix digits) with an 'M' suffix
+To avoid possible confusion, from now on 'master' will display the last released version number (without bugfix digits) with an 'M' suffix - unless it is a release candidate in which case the suffix will be rc{n}.
 
 e.g.
 Last release was yoshimi-1.3.5.2
